Cancel a running stroke in the filter manager when closing the view

This needs to be done before we enter the destructor of KisImage.

BUG:324114